--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.security.user.password=admin
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.url=jdbc:mysql://foodiedb.mysql.database.azure.com:3306/foodie?serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#EN CASO DE ERROR, COLOCAR:com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root1
 spring.datasource.password=Foodie123
 spring.jpa.hibernate.ddl-auto= create-drop
