--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.url=jdbc:mysql://foodiedb.mysql.database.azure.com:3306/foodie
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root1
 spring.datasource.password=Foodie123
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
